--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="Workflow Management System"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=C:\Users\Pa\Herd\workflow-management
+APP_URL=C:/Users/Pa/Herd/workflow-management
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
