.env with correct details just named it example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-APP_NAME="Workflow Management System"
+APP_NAME="WMSystems"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:dBGcMrZKLoLVUk8PGpIbz3d+q3RGsfxjz/JV/YkPDmA=
 APP_DEBUG=true
 APP_URL=C:/Users/Pa/Herd/workflow-management
+
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,11 +23,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=dedi320.jnb2.host-h.net
 DB_PORT=3306
-DB_DATABASE=workflow_management
-DB_USERNAME=your_db_user
-DB_PASSWORD=your_db_password
+DB_DATABASE=wmsystems
+DB_USERNAME=dediggb_12
+DB_PASSWORD="wsv8egV3VRNRDKX7drj8"
 
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
@@ -53,6 +55,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -61,11 +65,14 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.wmsystems.co.za
+MAIL_PORT=587
+MAIL_USERNAME=info@wmsystems.co.za
+MAIL_PASSWORD=Stephanus@99
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="info@wmsystems.co.za"
 MAIL_FROM_NAME="${APP_NAME}"
+
+FCM_SERVER_KEY=your_firebase_server_key
+PROVIDER = YHWH
