--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "livewire/flux": "^2.1.1",
         "livewire/livewire": "^3.6",
         "livewire/volt": "^1.7.0",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/laravel-multitenancy": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
